--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Class Routine Maker</h1>
+        <h1 class="text-center">Class Routine Maker (MADE BY AFIF)</h1>
         <div class="form-group">
             <label for="title">Edit Title</label>
             <input type="text" id="title" class="form-control" placeholder="Enter Routine Title">
